27_matrix_input/grade.txt
Grading at Thu Jul 18 21:42:10 UTC 2019
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:12:3: error: too many arguments to function ‘perror’
   perror("Could not open %s", argv[1]);
   ^
In file included from rotateMatrix.c:1:0:
/usr/include/stdio.h:846:13: note: declared here
 extern void perror (const char *__s);
             ^
The code did not compile!

Overall Grade: F
